# fast_generation

./: Cargo.toml  README.md
src/: main.rs  raw.sql  setup.sql
