[package]
name = "fast_generation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
chrono = "0.4.38"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
rand = "0.8.5"
postgres-types = "0.2"
rust_decimal = { version = "1.7.0", features = ["tokio-pg"] }
once_cell = "1.20.2"
